refactor annotations in clasess