@@ -1,12 +1,14 @@
 package com.bdf.inacap.domain.entity;
 
-import lombok.Getter;
+import jakarta.persistence.Entity;
+import lombok.*;
 
 @Getter
+@AllArgsConstructor
 public enum EstadoEventoLegal {
     ABIERTO, CERRADO;
 
     Long getId() {
-        return new Long(this.ordinal());
+        return Long.valueOf(this.ordinal());
     }
 }
